<resources>
    <string name="app_name">Paycash</string>
    <string name="next">Next</string>
    <string name="getStarted">Get Started</string>
    <string name="tvSkip">Skip</string>
    <string name="textview">TextView</string>
    <string name="title_activity_main_fragment">MainFragment</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="Report">Report</string>
    <string name="sign_up">Already Have Account ? Sign In Now!</string>
    <string name="btn_register">Register</string>
    <string name="tvPass">Password</string>
    <string name="tvEmail">Email</string>
    <string name="tvUname">Username</string>
    <string name="Profile">Profile</string>
    <string name="Pembayaran">Pilih Methode Pembayaran</string>
    <string name="transfer">Transfer Bank</string>
    <string name="Chat">Chat</string>
    <string name="News">News</string>
    <string name="tvButton">Lebih Banyak</string>
    <string name="popular">Popular</string>
    <string name="finance">finacne</string>
    <string name="title_news">News</string>
    <string name="title_report">Report</string>
    <string name="login">Login</string>
    <string name="finances">Finance</string>
    <string name="date">Date</string>
    <string name="Sources">Sources</string>
    <string name="sent">Sent</string>
    <string name="school_payment">School Payment</string>
    <string name="in_04_00_am_13_july">In 04.00 AM, 13 July</string>
    <string name="januari">Januari</string>
    <string name="februari">Februari</string>
    <string name="LANJUT">lanjut</string>
    <string name="Notification">Riwayat</string>
    <string name="beranda">Beranda</string>
    <string name="Inbox">Inbox</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="maret">Maret</string>
    <string name="april">April</string>
    <string name="mei">Mei</string>
    <string name="Juni">Juni</string>
    <string name="juli">Juli</string>
    <string name="agustus">Agustus</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account ? Sign Up !</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="when">When</string>
    <string name="datetime">23 Jan 2020</string>
    <string name="school">School</string>
    <string name="smk_negeri_4">SMK Negeri 4</string>
    <string name="_12_aug_10_am">12 Aug, 10 AM</string>
    <string name="sekolah">Sekolah</string>
    <string name="bayaran">Jenis Pembayaran</string>
    <string name="scan_qr">Scan QR</string>
    <string name="scan">Scan QR mu ke merchant sekolah</string>
    <string name="todo">TODO</string>
</resources>
