<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="50dp">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/logo_main"
            android:text="@string/app_name"
            android:gravity="center_horizontal"
            android:textSize="45sp"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:fontFamily="@font/montserrateb"
            android:textColor="@android:color/white"/>


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_img"
            android:layout_height="80dp"
            android:layout_marginTop="1dp"
            android:layout_width="80dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/user"
            android:layout_marginBottom="@dimen/activity_vertical_margin">
        </de.hdodenhof.circleimageview.CircleImageView>

        <EditText
            android:id="@+id/editUser"
            android:layout_width="match_parent"
            android:hint="@string/tvUname"
            android:textColorHint="@color/whiteTextColor"
            android:layout_height="wrap_content"
            android:layout_below="@+id/username"
            android:layout_marginLeft="20dp"
            android:textColor="@color/whiteTextColor"
            android:backgroundTint="@android:color/white"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp" />

        <EditText
            android:id="@+id/editEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tvEmail"
            android:textColorHint="@color/whiteTextColor"
            android:textColor="@color/whiteTextColor"
            android:layout_below="@+id/email"
            android:layout_marginLeft="20dp"
            android:backgroundTint="@android:color/white"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp" />

        <EditText
            android:id="@+id/editPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:textColor="@color/whiteTextColor"
            android:layout_below="@+id/password"
            android:hint="@string/tvPass"
            android:textColorHint="@color/whiteTextColor"
            android:layout_marginLeft="20dp"
            android:backgroundTint="@android:color/white"
            android:layout_marginBottom="32dp"
            android:layout_marginRight="20dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/tombol_register"
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/montserratr"
            android:textStyle="normal"
            android:text="@string/btn_register"
            android:textColor="#ffffff"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
            android:clickable="true"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:layout_editor_absoluteY="268dp"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_height="wrap_content" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="@dimen/activity_vertical_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="18dp"
            android:gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:textColor="@android:color/white"
            android:text="@string/sign_up"/>

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>